# SEAMuS

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
model_outputs/: README.md
resources/: README.md
scripts/corruption/: generate_edit_files.sh  generate_edit_prompts.sh  postprocess_all_corrupted_annotations.sh
scripts/eval/: example_alignscore.sh  example_bootstrap_ci.sh  example_ceaf_ree.sh  example_score_llm.sh
scripts/inference/: inference_combined.sh  inference_report.sh
scripts/prompting/: example_prompt_claude.sh  example_prompt_gpt.sh
scripts/training/combined/: combined_event_only_bart.sh  combined_event_only_pegasus.sh  combined_event_only_t5.sh  combined_text_only_bart.sh  combined_text_only_pegasus.sh  combined_text_only_t5.sh  combined_text_with_event_bart.sh  combined_text_with_event_pegasus.sh  combined_text_with_event_t5.sh  combined_text_with_report_event_bart.sh  combined_text_with_report_event_pegasus.sh  combined_text_with_report_event_t5.sh  (+3 more)
seamus/: constants.py
seamus/corruption/: build_template_edit_prompts.py  generate_edits.py  postprocess_corrupted_annotations.py
seamus/datasets/: dataset.py
seamus/evaluation/: README.md  alignscore.py  bootstrap_ci.py  ceaf_ree.py  report_baseline.py  score_llm.py
seamus/inference/: inference.py
seamus/prompt/: build_all_prompts.sh  build_prompts.py  prompt_claude.py  prompt_gpt.py  prompt_utils.py  test_prompt_file.jsonl
seamus/retrieval/: context_retrieval_bm25.py  context_retrieval_sentence_transformers.py  utils.py
seamus/training/: train.py
(+12 files in other folders)
