[tool.poetry]
name = "seamus"
version = "0.1.0"
description = "SEAMuS: Summaries of Events Across Multiple Sources"
authors = ["Will Walden <wgantt.iv@gmail.com>"]
license = "CC-BY-SA-4.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
click = "^8.1.7"
numpy = "1.26.4"
spacy = "^3.7.5"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp311-cp311-linux_x86_64.whl"}
evaluate = "^0.4.3"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
sacremoses = "^0.1.1"
bm25s = {extras = ["full"], version = "^0.2.1"}
sentence-transformers = "^3.1.1"
tqdm = "^4.66.5"
datasets = "^3.0.1"
transformers = "^4.45.1"
accelerate = "^0.34.2"
deepspeed = "^0.15.1"
peft = "^0.13.0"
anthropic = "^0.34.2"
openai = "^1.50.2"
tenacity = "^9.0.0"
sentencepiece = "^0.2.0"
spacy-alignments = "^0.9.1"
more-itertools = "^10.5.0"
pandas = "^2.2.3"
metametric = "^0.1.2"
editdistance = "^0.8.1"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ipython = "^8.25.0"
jupyter = "^1.0.0"
boto3 = "^1.34.135"
botocore = "^1.34.135"
pandas = "^2.2.2"
bs4 = "^0.0.2"
spacy-alignments = "^0.9.1"
stanza = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
